--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "nlp",
     "ai"
   ],
-  "icon": "out/media/ai-assistant-logo.jpeg",
+  "icon": "out/media/ai-assistant-logo.png",
   "galleryBanner": {
     "color": "#0000FF",
     "theme": "dark"
@@ -38,7 +38,7 @@
       "activitybar": [
         {
           "id": "ai-assistant-view",
-          "title": "AI assistant",
+          "title": "AI Assistant",
           "icon": "./out/media/activity-bar-logo.svg"
         }
       ]
@@ -119,8 +119,8 @@
       {
         "viewType": "markdown.preview",
         "icon": {
-          "light": "./out/media/ai-assistant-logo.jpeg",
-          "dark": "./out/media/ai-assistant-logo.jpeg"
+          "light": "./out/media/ai-assistant-logo.png",
+          "dark": "./out/media/ai-assistant-logo.png"
         }
       }
     ]
