--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
+		"module": "ESNext",
 		"target": "ES2020",
 		"outDir": "out",
+    "moduleResolution": "Node",
 		"lib": [
 			"ES2020",
 			"DOM"
@@ -11,8 +12,25 @@
 		"rootDir": "src",
     "esModuleInterop": true,
 		"strict": true,
-		// "noImplicitReturns": true,
-		// "noFallthroughCasesInSwitch": true,
-		// "noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUnusedParameters": true,
+    "allowJs": false,
+    "skipLibCheck": true,
+    "removeComments": true,
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["src/*"],
+    }
   }
 }
